# rancor

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: boxed_error.rs  lib.rs  thin_box.rs
