[package]
name = "rancor"
description = "Scalable and efficient error handling without type composition"
version = "0.1.0-rc.2"
authors = ["David Koloski <djkoloski@gmail.com>"]
edition = "2021"
rust-version = "1.81"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rkyv/rancor"
keywords = ["error", "error-handling", "no_std"]
categories = ["rust-patterns", "no-std"]
documentation = "https://docs.rs/rancor"

[dependencies]
ptr_meta = { version = "=0.3.0-rc.2", default-features = false, features = ["derive"] }

[features]
default = ["alloc"]
alloc = []

[patch.crates-io]
ptr_meta = { git = "https://github.com/rkyv/ptr_meta" }
